memory classes made

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,12 @@ project(CPU)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(CPU main.cpp)
+add_executable(CPU main.cpp
+        memory.h
+        RAM.h
+        ROM.h
+        CPU.h
+        instruction.h
+        memory.cpp
+        RAM.cpp
+        ROM.cpp)
