Files Moved To Directories

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,26 +4,26 @@ project(CPU)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(CPU main.cpp
-        memory.h
-        RAM.h
-        ROM.h
-        CPU.h
-        instruction.h
-        memory.cpp
-        RAM.cpp
-        ROM.cpp
-        CPU.cpp
-        instruction.cpp
-        Add.cpp
-        Add.h
-        SetMemory.cpp
-        SetMemory.h
-        Add_I.cpp
-        Add_I.h
-        Jump.cpp
-        Jump.h
-        Exit.cpp
-        Exit.h
-        Print.cpp
-        Print.h
+        Memory/memory.h
+        Memory/RAM.h
+        Memory/ROM.h
+        CPU/CPU.h
+        Instructions/instruction.h
+        Memory/memory.cpp
+        Memory/RAM.cpp
+        Memory/ROM.cpp
+        CPU/CPU.cpp
+        Instructions/instruction.cpp
+        Instructions/Add.cpp
+        Instructions/Add.h
+        Instructions/SetMemory.cpp
+        Instructions/SetMemory.h
+        Instructions/Add_I.cpp
+        Instructions/Add_I.h
+        Instructions/Jump.cpp
+        Instructions/Jump.h
+        Instructions/Exit.cpp
+        Instructions/Exit.h
+        Instructions/Print.cpp
+        Instructions/Print.h
         test.cpp)
